Thinkful Dispay exercise completed by Ronny P.

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,12 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+	<section class="main-block">
+	  <div class="rectangles rect-green"></div>
+    <div class="rectangles rect-blue"></div>
+    <div class="sm-rectangles rect-gray"></div>
+    <div class="sm-rectangles rect-black"></div>
+    <div class="sm-rectangles rect-yellow"></div>
+	</section>
 </body>
 </html>
