Added gh-pages branch

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -24,5 +24,6 @@
     <div class="sm-rectangles rect-black"></div>
     <div class="sm-rectangles rect-yellow"></div>
 	</section>
+  <!-- End main block section -->
 </body>
 </html>
