--- a/position-exercise.html
+++ b/position-exercise.html
@@ -19,7 +19,7 @@
 <body>
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
   <nav>
-    <img src="images/icon.png">
+    <img src="images/icon.png" class="black-kittie">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="display-exercise.html">display</a></li>
@@ -28,7 +28,10 @@
   </nav>
 
   <main>
-    <!-- Put the HTML you need to accomplish the design -->
+    <section class="pets">
+      <img src="images/spacecat.png" alt="Kittie Logo" class="kittie">
+      <img src="images/spacedog.png" alt="Kittie Logo" class="doggie">
+    </section>
   </main>
 </body>
 </html>
